# pyfluent

./: .bandit  .clang-format  .codacy.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .vale.ini  ADO_FLUENT_JOURNALS_PLAN.md  AGENTS.md  AUTHORS  CHANGELOG.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FourierCoefficients.txt  JouTest.py  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  check_vulnerabilities.py  check_vulnernabilities.py  codecov.yml  copy_ablation_images.py  cov_xml.xml  duplicates.txt  example_test_report.txt  field_data_dump.txt  fix_ablation_images_issue.md  fluent.py  hackathon.py  index.html  llms.txt  (+24 more)
.ci/: basedpyright.json  compare_flobject.py  docker_data_cleaner.py  fluent_test_runner.py  generate_certs.sh  get_hanging_tests.py  print_fluent_grpc_version.py  print_fluent_version.py  pull_fluent_image.py  pull_fluent_image.sh  pylock.toml  server_ext.cnf  start_fluent.py  stop_fluent.py  update_last_commit_info.sh
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  example_request.yml  feature_request.yml  fluent_issue.yml
.github/workflows/: ci.yml  codeql.yml  compare-flobject.yml  dependency-review.yml  doc-build-dev-nightly.yml  doc-build-release.yml  execute-examples-weekly.yml  force-update-stable-Fluent-image-version.yml  label.yml  nightly-dev-doc-build.yml  nightly-doc-build.yml  nightly-test-run-dev-version.yml  nightly-test-run-develop-branch.yml  nightly-test-run.yml  release-doc-build.yml  run-custom-tests.yml  single-test.yml  tag-iteration-ends.yml  test-fluent-journals.yml  test-fluent-tests.yml  test-podman-compose.yml  test-run-custom.yml  test-run-dev-version-nightly.yml  (+9 more)
aft_demo/: elbow.cas.h5  solver.ipynb
codegen/: allapigen.py  allapigen_doc.py  datamodelgen.py  print_fluent_version.py  pyprotogen.py  settingsgen.py  temporary_file.py  tuigen.py  write_settings_yaml.py
dev/: .buildinfo  404.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
devel/: alt_search.py  alt_search_trie.py  copy_to_fluent.md  update_pyfluent_in_fluent.md  update_settings_builtin_data.py
doc/: .vale.ini  Makefile  api_rstgen.py  bridge_content.py  datamodel_rstgen.py  deprecated_pyfluent_apis.py  doc_utils.py  make.bat  modify_html.py  rstgen.py  settings.rst  settings_rstgen.py  tui_rstgen.py  validate_png.py
docker/: copy_ansys_files.py  copy_docker_files.py  create_env_for_docker_compose.py  docker-compose-meshing.yml  docker-compose-solver.yml
examples/: README.txt
install_data/: ansys_api_fluent-0.1.0-py3-none-any.whl
mesh_demo/: meshingworkflow.ipynb  slurm.ipynb  units.ipynb
protos/: .protolint.yaml
pyfluentai_1/: .gitignore  README.md  pyproject.toml
pyfluentai_1/docs/: design.md
pyfluentai_1/docsource/: sg_execution_times.rst
pyfluentai_1/docsource/api/: deprecated_apis.rst
pyfluentai_1/docsource/python_source/src/ansys/fluent/core/: _types.py  exceptions.py  file_session.py  report.py  session_pure_meshing.pyi  session_solver.py  system_coupling.py
pyfluentai_1/docsource/python_source/src/ansys/fluent/core/codegen/: __init__.py
pyfluentai_1/docsource/python_source/src/ansys/fluent/core/codegen/data/: meshing_utilities_examples.py  static_info_222_meshing.pickle
pyfluentai_1/docsource/python_source/src/ansys/fluent/core/filereader/: data_file.py
pyfluentai_1/docsource/python_source/src/ansys/fluent/core/launcher/: error_handler.py  launch_options.py  process_launch_string.py  watchdog_exec
pyfluentai_1/docsource/python_source/src/ansys/fluent/core/scheduler/: machine_list.py
pyfluentai_1/docsource/python_source/src/ansys/fluent/core/services/: datamodel_se.py  deprecated_field_data.py  interceptors.py  streaming.py
pyfluentai_1/docsource/python_source/src/ansys/fluent/core/solver/: __init__.py  _docstrings.py  settings_builtin_bases.py
pyfluentai_1/docsource/python_source/src/ansys/fluent/core/streaming_services/: datamodel_event_streaming.py
pyfluentai_1/docsource/python_source/src/ansys/fluent/core/utils/: context_managers.py  file_transfer_service.py  setup_for_fluent.py
pyfluentai_1/docsource/user_guide/: convert_journal.rst  units.rst
pyfluentai_1/docsource/user_guide/fields/: field_data.rst
pyfluentai_1/docsource/user_guide/solver_settings/set_up/models/: energy.rst
pyfluentai_1/examples/: chunk_index.py  chunk_index2.py  ingest_pyfluent.py  launch_fluent_prompt.py  rerank_demo.py
pyfluentai_1/src/pyfluentai/: __init__.py  _constants.py  data_extractor.py  document_indexer.py  indexing.py  labeling.py  prompt_generator.py  reranker.py  retriever.py  section_indexer.py
pyfluentai_1/tests/: test_labeling.py  test_retrieve_files_for_query.py
release/: versions.json
requirements/: requirements_build.txt  requirements_codegen.txt  requirements_doc.txt  requirements_tests.txt  requirements_vulnernabilities.py
tests/: conftest.py  failing_tests.txt  fluent_fixtures.py  generate_certs.py  podman_compose.py  pytest.ini  session.dump  te_file_session.py  test_aero_session.py  test_batch_ops.py  test_builtin_settings.py  test_cad_to_post_ftm.py  test_cad_to_post_wtm.py  test_casereader.py  test_codegen.py  test_config.py  test_creatable.py  test_data_model_cache.py  test_datamodel_api.py  test_datamodel_service.py  test_datareader.py  test_deprecate.py  test_elbow_settings_api.py  test_elbow_tui_api.py  test_enhanced_meshing_workflow_new_data_model_api.py  test_error_handling.py  test_events_manager.py  test_exhaust_manifold_settings_api.py  test_exhaust_manifold_tui_api.py  test_exhaust_system.py  test_field_data.py  test_field_data_errors.py  test_file_session.py  test_file_transfer_service.py  test_fix_doc.py  test_flobject.py  test_fluent_fixes.py  test_fluent_session.py  test_fluent_version.py  test_fluent_version_marker.py  (+57 more)
version/: index.html
windload/: __init__.py  windload_mesh.py  windload_solve.py
(+430360 files in other folders)
