[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-fluent-core"
description = "PyFluent provides Pythonic access to Ansys Fluent."
readme = "README.rst"
requires-python = ">=3.10,<3.14"
license = {file = "LICENSE"}
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
repository = "https://github.com/ansys/pyfluent"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-api-fluent>=0.3.35",
    "ansys-platform-instancemanagement~=1.1",
    "ansys-tools-filetransfer>=0.1,<0.3",
    "ansys-units>=0.4.0,<1.0",
    "defusedxml>=0.7.1",
    "docker>=7.1.0",
    "grpcio>=1.30.0",
    "grpcio-health-checking>=1.30.0",
    "grpcio-status>=1.26.0",
    "nltk>=3.9.1",
    "numpy>=1.14.0,<3.0.0",
    "pandas>=1.1.0,<2.3",
    "pyansys-tools-report>=0.8.1",
    "pyyaml>=6.0",
]
dynamic = ["version"]

[tool.flit.sdist]
include = ["src/ansys/fluent/core/generated/"]

[project.optional-dependencies]
reader = ["h5py==3.13.0"]
tests = [
    "pytest==8.3.5",
    "pytest-cov==6.1.0",
    "pytest-mock==3.14.0",
    "pytest-xdist==3.6.1",
]
docs = [
    "Sphinx==8.1.3",
    "jupyter_sphinx==0.5.3",
    "numpydoc==1.8.0",
    "matplotlib==3.10.1",
    "ansys-sphinx-theme==1.4.2",
    "pypandoc==1.15",
    "pytest-sphinx==0.6.3",
    "sphinx-autobuild==2024.10.3",
    "sphinx-autodoc-typehints==3.0.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.19.0",
    "sphinx-notfound-page==1.1.0",
    "sphinxcontrib-websupport==2.0.0",
    "sphinxemoji==0.3.1",
    "sphinx-toggleprompt==0.6.0",
    "autodocsumm==0.2.14",
    "beautifulsoup4==4.13.3",
    "openpyxl>=3.1.5",
    "plotly>=5.22.0",
    "python-pptx>=0.6.23",
    "quarto-cli==1.6.42",
    "pdf2image==1.17.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.17.0",
]

[tool.flit.module]
name = "ansys.fluent.core"

[project.urls]
"Documentation" = "https://fluent.docs.pyansys.com/"
"Source" = "https://github.com/ansys/pyfluent"
"Tracker" = "https://github.com/ansys/pyfluent/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
--ignore=tests/fluent
--ignore=tests/journals
-v
--durations=0
--show-capture=all
"""
markers = [
    "settings_only: Read and modify the case settings only, without loading the mesh, initializing, or solving the case",
    "nightly: Tests that run under nightly CI",
    "codegen_required: Tests that requires codegen",
    "fluent_version(version): Tests that runs with specified Fluent version",
    "standalone: Tests that cannot be run within container"
]


[tool.black]
extend-exclude = "/(src/ansys/fluent/core/meshing/tui*|src/ansys/fluent/core/solver/tui*|src/ansys/fluent/core/solver/settings*|src/ansys/fluent/core/datamodel*)/"


[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 88
default_section = "THIRDPARTY"
skip_glob = [
    "src/ansys/fluent/core/generated"
]
filter_files = "true"
known_first_party = ["ansys"]


[tool.codespell]
skip = """
    *.xml,
    ./src/ansys/fluent/core/generated/*,
    ./src/ansys/fluent/core/codegen/data/fluent_gui_help.xml,
    pyproject.toml,
    CODE_OF_CONDUCT.md,
    """
ignore-words = ".github/styles/config/vocabularies/ANSYS/accept.txt"


[tool.docformatter]
in-place = "true"
exclude = [
    "tests/",
    "src/ansys/fluent/core/generated/",
]
black = "true"
non-cap = [
    "initDatamodel",
    "getAttributeValue",
    "getState",
    "setState",
    "updateDict",
    "deleteObject",
    "executeCommand",
    "createCommandArguments",
    "deleteCommandArguments",
    "getSpecs",
    "getStaticInfo",
    "subscribeEvents",
    "unsubscribeEvents"
]


[tool.coverage.run]
source = ["ansys/fluent"]
omit = [
    "*/ansys/fluent/core/generated/*",
]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
package = "ansys.fluent.core"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
template = "doc/changelog.d/changelog_template.jinja"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/pyfluent/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pyfluent/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true
[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
