[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfluentai"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "llama-index",
    "llama-index-embeddings-huggingface",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest",
]